higher res swagger json
